Match 1.12 playback controls and resume behavior